Prevent slider from being covered by image background

--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -97,6 +97,7 @@ a
           font-size 24px
         .cropit-image-zoom-input
           margin 0 20px
+          position relative
 
   .controls-wrapper
     absolute bottom left
